# LSPosed

./: .gitattributes  .gitignore  .gitmodules  CNAME  README.md  README_CN.md  appveyor.yml  build.gradle  build.gradle.kts  build.sh  crowdin.yml  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
.github/: dependabot.yml  stale.yml
Bridge/: build.gradle  proguard-rules.pro
core/src/main/cpp/: .clang-tidy  Android.mk  Application.mk  CMakeLists.txt  dynamic_list
core/src/main/cpp/daemon/: Android.mk  logcat.cpp  logcat.h
core/src/main/cpp/main/: Android.mk  CMakeLists.txt
core/src/main/cpp/main/api/: riru_main.cpp  zygisk_main.cpp
core/src/main/cpp/main/include/: ByteOrder.h  JNIHelper.h  byte_order.h  config.h  dl_util.h  jni_helper.h  logging.h  macros.h  native_util.h  utils.h
core/src/main/cpp/main/include/art/runtime/: art_method.h  class_linker.h  hidden_api.h  instrumentation.h  jni_env_ext.h  oat_file_manager.h  reflection.h  runtime.h  thread.h  thread_list.h
core/src/main/cpp/main/include/art/runtime/gc/: collector_type.h  gc_cause.h  heap.h  scoped_gc_critical_section.h
core/src/main/cpp/main/include/art/runtime/gc/collector/: gc_type.h
core/src/main/cpp/main/include/art/runtime/jit/: profile_saver.h  profiling_info.h
core/src/main/cpp/main/include/art/runtime/mirror/: class.h
core/src/main/cpp/main/include/base/: object.h
core/src/main/cpp/main/include/framework/androidfw/: ResourceTypes.h  resource_types.h
core/src/main/cpp/main/src/: config_manager.cpp  config_manager.h  context.cpp  context.h  elf_util.cpp  elf_util.h  main.cpp  native_api.cpp  native_api.h  native_hook.cpp  native_hook.h  resource_hook.cpp  resource_hook.h  riru_hook.cpp  riru_hook.h  riru_main.cpp  rirud_socket.cpp  rirud_socket.h  service.cpp  service.h  symbol_cache.cpp  symbol_cache.h  zygisk_main.cpp
core/src/main/cpp/main/src/jni/: art_class_linker.cpp  art_class_linker.h  art_heap.cpp  art_heap.h  bypass_sig.cpp  bypass_sig.h  config_manager.cpp  config_manager.h  logger.cpp  logger.h  native_api.cpp  native_api.h  pending_hooks.cpp  pending_hooks.h  resources_hook.cpp  resources_hook.h  sandhook.cpp  sandhook.h  yahfa.cpp  yahfa.h  zygisk.h
core/src/main/cpp/main/template/: config.cpp
core/src/main/cpp/shared/: Obfuscation.cpp  Obfuscation.h
core/src/main/jni/: CMakeLists.txt
core/src/main/jni/api/: riru_main.cpp  zygisk_main.cpp
core/src/main/jni/include/: ConfigBridge.h  config.h  config_bridge.h  context.h  elf_util.h  logging.h  macros.h  native_hook.h  native_util.h  symbol_cache.h  utils.h
core/src/main/jni/include/art/runtime/: class_linker.h  hidden_api.h  runtime.h  thread.h
core/src/main/jni/include/art/runtime/gc/: gc_cause.h
core/src/main/jni/include/art/runtime/jit/: jit_code_cache.h
core/src/main/jni/include/base/: object.h
core/src/main/jni/include/framework/androidfw/: resource_types.h
core/src/main/jni/src/: context.cpp  context.h  elf_util.cpp  native_api.cpp  native_api.h  native_hook.cpp  native_hook.h  service.cpp  service.h  symbol_cache.cpp
core/src/main/jni/src/jni/: art_class_linker.cpp  dex_parser.cpp  dex_parser.h  hook_bridge.cpp  hook_bridge.h  native_api.cpp  native_api.h  resources_hook.cpp  resources_hook.h  yahfa.h
core/src/main/jni/template/: config.cpp
daemon/src/main/jni/: CMakeLists.txt  dex2oat.c  dex2oat.cpp  logcat.cpp  logcat.h  logging.h  obfuscation.cpp  obfuscation.h  utils.h
dex2oat/src/main/cpp/: CMakeLists.txt  dex2oat.c  logging.h
edxp-core/src/main/cpp/main/: CMakeLists.txt  main.cpp
edxp-core/src/main/cpp/main/include/: JNIHelper.h  android_build.h  config.h  dl_util.h  logging.h  native_util.h  utils.h
edxp-core/src/main/cpp/main/include/art/runtime/: art_method.h  class_linker.h  hidden_api.h  instrumentation.h  jni_env_ext.h  oat_file_manager.h  oat_quick_method_header.h  reflection.h  runtime.h  thread.h
edxp-core/src/main/cpp/main/include/art/runtime/gc/: gc_cause.h  heap.h
edxp-core/src/main/cpp/main/include/art/runtime/gc/collector/: gc_type.h
edxp-core/src/main/cpp/main/include/art/runtime/jit/: jit_code_cache.h
edxp-core/src/main/cpp/main/include/art/runtime/mirror/: class.h
edxp-core/src/main/cpp/main/include/base/: object.h
edxp-core/src/main/cpp/main/include/framework/: fd_utils-inl.h  fd_utils.h
edxp-core/src/main/cpp/main/include/framework/androidfw/: ResourceTypes.h
edxp-core/src/main/cpp/main/inject/: config_manager.cpp  framework_hook.cpp
edxp-core/src/main/cpp/main/java_hook/: java_hook.cpp  java_hook.h
edxp-core/src/main/cpp/main/native_hook/: native_hook.cpp  native_hook.h  resource_hook.cpp  riru_hook.cpp
edxp-core/src/main/cpp/main/src/: config_manager.cpp  config_manager.h  edxp_context.cpp  edxp_context.h  main.cpp  native_hook.cpp  native_hook.h  resource_hook.cpp  resource_hook.h  riru_hook.cpp  riru_hook.h  rirud_socket.cpp  rirud_socket.h
edxp-core/src/main/cpp/main/src/jni/: art_class_linker.cpp  art_class_linker.h  art_heap.cpp  art_heap.h  edxp_config_manager.cpp  edxp_config_manager.h  edxp_pending_hooks.cpp  edxp_pending_hooks.h  edxp_resources_hook.cpp  edxp_resources_hook.h  edxp_yahfa.cpp  edxp_yahfa.h  framework_zygote.cpp  framework_zygote.h
magisk-loader/src/main/jni/: CMakeLists.txt
magisk-loader/src/main/jni/api/: riru.h  riru_main.cpp  zygisk.h  zygisk_main.cpp
magisk-loader/src/main/jni/include/: loader.h
magisk-loader/src/main/jni/src/: ConfigImpl.h  config_impl.h  magisk_loader.cpp  magisk_loader.h  service.cpp  service.h
magisk-loader/src/main/jni/template/: loader.cpp
sandhook-hooklib/src/main/cpp/: CMakeLists.txt  sandhook.cpp
sandhook-hooklib/src/main/cpp/art/: art_method.cpp
sandhook-hooklib/src/main/cpp/casts/: cast_compiler_options.cpp
sandhook-hooklib/src/main/cpp/includes/: art_classlinker.h  art_method.h  cast_art_method.h  cast_compiler_options.h  hide_api.h  inst.h  log.h  offset.h  sandhook.h  trampoline.h  utils.h
sandhook-hooklib/src/main/cpp/nativehook/: native_hook.cpp
sandhook-hooklib/src/main/cpp/utils/: dlfcn_nougat.cpp  elf_util.cpp  hide_api.cpp
(+1786 files in other folders)
